less: prevent elements from overflowing panels - add horizontal scrollbar when necessary

--- a/kallithea/public/less/style.less
+++ b/kallithea/public/less/style.less
@@ -113,6 +113,13 @@ nav.navbar #logo > .navbar-brand > img {
   }
 }
 
+/* every direct child of a main panel, that is not .panel-heading, should auto
+ * overflow to prevent overflowing of elements like text boxes and tables */
+#main > .panel > :not(.panel-heading) {
+  overflow-x: auto;
+  min-height: 0.01%;
+}
+
 .form-group > label {
   float: left;
 }
